<resources>
    <string name="app_name">SmartTrack</string>
    <string name="open_nav">Open navigation Drawer</string>
    <string name="close_nav">Close navigation Drawer</string>
    <string name="register_as_student">Register As Student</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="student_image">student-image</string>
    <string name="back_button">back-button</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="welcome_to_smarttrack">Welcome To SmartTrack</string>
    <string name="log_in">Log In</string>
    <string name="logo">LOGO</string>
    <string name="register_as_teacher">Register As Teacher</string>
    <string name="email">Email</string>
    <string name="teacher_image">teacher-image</string>
    <string name="create_one">Create one</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="log_in_as_teacher">Log In As Teacher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hey">Hey</string>
    <string name="select_department">Select Department</string>
    <string name="select_grade">Select Grade</string>
    <string name="select_strand">Select Strand</string>
    <string name="select_semester">select_semester</string>
    <string name="_1st_sem">1st Sem</string>
    <string-array name="spinner_items">
        <item>1st Sem</item>
        <item>2nd Sem</item>
        <!-- Add more items as needed -->
    </string-array>
    <string-array name="Grades">
        <item>Grade 11</item>
        <item>Grade 12</item>
        <!-- Add more items as needed -->
    </string-array>
    <string-array name="Strand">
        <item>ABM</item>
        <item>GAS</item>
        <item>HE</item>
        <item>HUMSS</item>
        <item>ICT</item>
        <item>STEM</item>
        <!-- Add more items as needed -->
    </string-array>
    <string-array name="Quarters">
        <item>1st Quarter</item>
        <item>2nd Quarter</item>
        <!-- Add more items as needed -->
    </string-array>
    <string-array name="Quarters2">
        <item>3rd Quarter</item>
        <item>4th Quarter</item>
        <!-- Add more items as needed -->
    </string-array>
    <string-array name="Semester">
        <item>1st Semester</item>
        <item>2nd Semester</item>
        <!-- Add more items as needed -->
    </string-array>
    <string name="welcome_message">Welcome, %s!</string>

</resources>