<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="420dp"
            android:layout_height="420dp"
            android:src="@drawable/login_logo"
            android:contentDescription="@string/app_name" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutCompat">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/mid" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="#D9D9D9"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/welcome_to_smarttrack"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutCompat2" />

</androidx.constraintlayout.widget.ConstraintLayout>
