<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".teacher_register">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="290dp"
        android:layout_height="63dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/profile_color"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtFName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:backgroundTint="#D9D9D9"
            android:ems="10"
            android:hint="First Name"
            android:textColor="@color/white"
            android:inputType="text"
            android:textSize="14sp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="290dp"
        android:layout_height="63dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/ffffff"
        android:layout_marginTop="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:backgroundTint="#D9D9D9"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="Last Name"
            android:inputType="text"
            android:textSize="14sp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat6"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#004FAC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBackReg"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="#004FAC"
            android:contentDescription="@string/back_button"
            android:src="@drawable/btn_back_white">

        </ImageButton>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat4"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat6">

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:contentDescription="teacher-image"
            android:src="@drawable/teacher_image" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/border_radius"
        android:backgroundTint="#D9D9D9"
        android:text="@string/register"
        android:fontFamily="@font/inter_bold"
        android:textColor="#001834"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/profile_color"
        android:layout_marginTop="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D9D9D9"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="14sp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="290dp"
        android:layout_height="63dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/profile_color"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D9D9D9"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="14sp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/register_as_teacher"
        android:textColor="#E3E3E3"
        android:fontFamily="@font/inter_bold"
        android:textSize="@dimen/_18ssp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat4" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>